# Szkolenie

./: pyproject.toml
src/api/: sample_api.py
src/sample_adding/: calculator.py
src/sample_classes_project/: core.py  main.py
tests/test_sample_adding/: test_add.py  test_calculator.py  test_calculator_setupclass.py
